syntax = "proto3";

package replication;

option go_package = "https://github.com/AlexTMIT/mandatory-activities-group-disgo/tree/main/mandatory-assignment-5/replication_service";

service ReplicationService {
  rpc Bidding(BidRequest) returns (BidReply);
  rpc AuctionQuery(AQueryRequest) returns (AQueryReply);
}

message BidRequest {
  int32 amount = 1;
}

message BidReply {
  string response = 1;
}

message AQueryRequest {}

message AQueryReply {
  int32 currentAmount = 1;
}